--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ authors = [
 ]
 dependencies = [
     "pandas>=2.2.2",
+    "bentoml>=1.3.1",
+    "mlflow>=2.15.1",
+    "seaborn>=0.13.2",
+    "numpy>=1.26.4",
+    "scikit-learn>=1.5.1",
+    "category-encoders>=2.6.3",
 ]
 requires-python = "==3.9.*"
 readme = "README.md"
@@ -24,4 +30,5 @@ dev = [
     "matplotlib>=3.9.1.post1",
     "mypy>=1.11.1",
     "jupyter>=1.0.0",
+    "pip>=24.2",
 ]
